--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "re100run",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,17 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
     "dayjs": "^1.11.6",
-    "framer-motion": "^7.5.1",
+    "firebase": "^9.18.0",
+    "framer-motion": "^10.5.0",
     "next": "12.3.1",
     "next-mdx-remote": "^4.2.0",
     "next-themes": "^0.2.1",
     "prettier": "^2.8.3",
     "prism-react-renderer": "^1.3.5",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-aria": "^3.23.1",
     "react-dom": "18.2.0",
+    "react-iconly": "^2.2.5",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "remark-mdx-code-meta": "^2.0.0",
