--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@turf/helpers": "^6.5.0",
+    "@turf/length": "^6.5.0",
+    "@types/mapbox-gl": "^2.7.10",
+    "@types/react-redux": "^7.1.25",
     "dayjs": "^1.11.6",
+    "easytimer-react-hook": "^1.0.3",
+    "easytimer.js": "^4.5.4",
     "firebase": "^9.18.0",
-    "framer-motion": "^10.5.0",
+    "framer-motion": "^10.6.0",
+    "immer": "^9.0.19",
+    "mapbox-gl": "^2.13.0",
     "next": "12.3.1",
     "next-mdx-remote": "^4.2.0",
     "next-themes": "^0.2.1",
@@ -22,18 +32,22 @@
     "react-aria": "^3.23.1",
     "react-dom": "18.2.0",
     "react-iconly": "^2.2.5",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
     "remark-mdx-code-meta": "^2.0.0",
     "slug": "^8.2.2"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.5.2",
     "@types/node": "18.7.23",
     "@types/prettier": "^2.7.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.8.4"
   }
 }
