--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@turf/length": "^6.5.0",
     "@types/mapbox-gl": "^2.7.10",
     "@types/react-redux": "^7.1.25",
+    "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.6",
     "easytimer-react-hook": "^1.0.3",
     "easytimer.js": "^4.5.4",
@@ -26,6 +27,7 @@
     "next": "12.3.1",
     "next-mdx-remote": "^4.2.0",
     "next-themes": "^0.2.1",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
