--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "12.3.1",
     "next-mdx-remote": "^4.2.0",
     "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prism-react-renderer": "^1.3.5",
